<resources>
    <string name="app_name">RebruX</string>
    <string name="str_app_name_footer">save the nature app</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_btn_sign">Sign Up</string>
    <string name="str_input_password">password</string>
    <string name="str_input_email">email</string>
    <string name="str_input_name">name</string>
    <string name="str_input_username">username</string>
    <string name="str_already_acc">Already have an account, </string>
    <string name="str_forgot_password">Forgot, </string>
    <string name="str_btn_login">Log in</string>
    <string name="str_btn_fotgot_password">Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_welcome_back">Welcome\nback!</string>
    <string name="str_dont_have_acc">Don’t have an account, </string>
    <string name="str_btn_register">Register</string>
    <string name="str_btn_send">Send</string>
    <string name="str_or">or</string>
    <string name="str_forgotpassword">Forgot password</string>
    <string name="str_user_profile">User Profile</string>
    <string name="str_totel_points">Total Points</string>
    <string name="str_btn_my_reports">My Reports</string>
    <string name="str_btn_logout">Logout</string>
    <string name="str_btn_details">Details</string>
    <string name="str_input_phone_number">phone number</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_save">Save</string>
    <string name="str_btn_change_password">Change Password</string>
    <string name="str_input_new_password">new password</string>
    <string name="str_input_confirm_password">confirm password</string>
    <string name="str_garbage">Garbage</string>
    <string name="str_btn_cleaned">Cleaned</string>
    <string name="str_update_map">Update the map</string>
    <string name="str_my_location">This app uses your current location</string>
    <string name="str_report_info">Tablings are public. Your username wil appear in the report</string>
    <string name="str_btn_camera">Camera</string>
    <string name="str_description">Add a description</string>
    <string name="str_add_picture">Add a picture</string>
</resources>