<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:alpha="0.7"
        android:background="@drawable/backgroundcirkles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_username_register"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/str_input_username"
        android:inputType="textPersonName"
        android:textColor="@color/dark"
        android:textSize="@dimen/font_txt_nrml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_welcome" />

    <TextView
        android:id="@+id/str_rebrux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="@dimen/font_txt_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/str_sub_rebrux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/str_app_name_footer"
        android:textColor="@color/dark"
        android:textSize="@dimen/font_txt_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_rebrux" />

    <TextView
        android:id="@+id/str_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="e"
        android:textColor="@color/dark"
        android:textSize="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_sub_rebrux" />

    <TextView
        android:id="@+id/str_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-64dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/str_welcome"
        android:textColor="@color/dark"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_logo" />

    <EditText
        android:id="@+id/input_email_register"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/str_input_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/dark"
        android:textSize="@dimen/font_txt_nrml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_register" />

    <EditText
        android:id="@+id/input_passsword_register"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/str_input_password"
        android:inputType="textPassword"
        android:textColor="@color/dark"
        android:textIsSelectable="false"
        android:textSize="@dimen/font_txt_nrml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email_register" />

    <Button
        android:id="@+id/btn_singup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/str_btn_sign"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_txt_big"
        app:backgroundTint="@color/green"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_register_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_passsword_register"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout_register_to_login"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_register_to_forgotpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/str_already_acc_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/str_already_acc"
            android:textSize="@dimen/font_txt_small" />

        <Button
            android:id="@+id/btn_register_to_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="36dp"
            android:layout_height="19dp"
            android:fontFamily="@font/poppins_light"
            android:insetTop="0dp"
            android:minHeight="10dip"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/str_btn_login"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="@dimen/font_txt_small"
            app:backgroundTint="@android:color/transparent"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_register_to_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/str_forgotpassword_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/str_forgot_password"
            android:textSize="@dimen/font_txt_small" />

        <Button
            android:id="@+id/btn_register_to_forgotpassword"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="19dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_light"
            android:insetTop="0dp"
            android:minHeight="10dip"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/str_btn_fotgot_password"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="@dimen/font_txt_small"
            app:backgroundTint="@android:color/transparent"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>