<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".fragments.ForgotpasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/str_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/str_forgotpassword"
            android:textSize="@dimen/font_txt_nrml" />

        <EditText
            android:id="@+id/input_email_forgotpassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/str_input_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark"
            android:textSize="@dimen/font_txt_nrml" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/str_btn_send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_txt_big"
            app:backgroundTint="@color/green"
            app:cornerRadius="30dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_or"
            android:textColor="@color/green"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/ic_google"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:contentDescription="google icon"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/ic_facebook"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:contentDescription="facebook icon"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_facebook" />

            <ImageButton
                android:id="@+id/ic_twitter"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:contentDescription="twitter icon"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/ic_twitter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_forgotpassword_to_login"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/str_already_acc_forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/str_already_acc"
                android:textSize="@dimen/font_txt_small" />

            <Button
                android:id="@+id/btn_forgotpass_to_login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="36dp"
                android:layout_height="19dp"
                android:fontFamily="@font/poppins_light"
                android:insetTop="0dp"
                android:minHeight="10dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/str_btn_login"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/font_txt_small"
                app:backgroundTint="@android:color/transparent"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_forgotpassword_to_register"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/str_register_forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/str_dont_have_acc"
                android:textSize="@dimen/font_txt_small" />

            <Button
                android:id="@+id/btn_fotgotpass_to_register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="46dp"
                android:layout_height="19dp"
                android:fontFamily="@font/poppins_light"
                android:insetTop="0dp"
                android:minHeight="10dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/str_btn_register"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/font_txt_small"
                app:backgroundTint="@android:color/transparent"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>